Add new AI Pulse and AI Lab articles: AI education 2025-2026, ChatGPT ads, ChatGPT Health, Claude Healthcare, NotebookLM study assistant

--- a/news.html
+++ b/news.html
@@ -145,6 +145,46 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <img src="assets/claude-healthcare-hero.png" alt="Claude for Healthcare">
+            <span class="date">Leden 2026</span>
+            <h3>Anthropic představuje Claude for Healthcare</h3>
+            <p>
+                Závod o AI ve zdravotnictví se zostřuje. Anthropic uvedl Claude for Healthcare
+                pouhé dny po OpenAI.
+            </p>
+            <a href="ai-news/claude-healthcare.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
+            <img src="assets/chatgpt-health-hero.png" alt="ChatGPT Health">
+            <span class="date">Leden 2026</span>
+            <h3>OpenAI spouští zdravotního asistenta s AI</h3>
+            <p>
+                ChatGPT Health pro spotřebitele a ChatGPT for Healthcare pro nemocnice.
+                Nejambicióznější expanze AI do zdravotnictví.
+            </p>
+            <a href="ai-news/chatgpt-health.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
+            <img src="assets/chatgpt-ads-hero.png" alt="OpenAI reklamy v ChatGPT">
+            <span class="date">Leden 2026</span>
+            <h3>OpenAI poprvé testuje reklamy v ChatGPT</h3>
+            <p>
+                OpenAI oznámilo testování reklam v ChatGPT pro bezplatné uživatele.
+                Co to znamená pro uživatele a jaká jsou bezpečnostní opatření?
+            </p>
+            <a href="ai-news/chatgpt-reklamy.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
+            <img src="assets/ai-education-hero.png" alt="AI ve vzdělávání 2025-2026">
+            <span class="date">Leden 2026</span>
+            <h3>AI ve vzdělávání 2025-2026</h3>
+            <p>
+                Komplexní přehled klíčových iniciativ, nástrojů a trendů v oblasti AI ve vzdělávání.
+                Program základka.ai, kurikulum AI dětem, praktické nástroje pro pedagogy.
+            </p>
+            <a href="ai-news/ai-ve-vzdelavani-2025-2026.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <img src="assets/gemini-3-5-hero.png" alt="Gemini 3.5 Hype">
             <span class="date">Prosinec 2025</span>
             <h3>Gemini 3.5: Hype vs Realita</h3>
