--- a/students.html
+++ b/students.html
@@ -196,6 +196,21 @@
         </a>
 
         <!-- Articles by date (Newest first) -->
+        <a href="ai-news/notebooklm-studijni-asistent.html" class="article-card">
+            <div class="article-card-image">
+                <img src="assets/notebooklm-study-hero.png" alt="NotebookLM studijní asistent">
+            </div>
+            <div class="article-card-content">
+                <span class="date">Leden 2026</span>
+                <h3>NotebookLM jako studijní asistent</h3>
+                <p>
+                    Kompletní průvodce pro studenty. Jak využít NotebookLM pro přehledy, otázky a audio shrnutí z
+                    vlastních materiálů.
+                </p>
+                <div class="read-more">Číst více →</div>
+            </div>
+        </a>
+
         <a href="ai-news/studium-s-gemini.html" class="article-card">
             <div class="article-card-image">
                 <img src="assets/gemini-study-hero.png" alt="Studium s Gemini">
