Restore all 4 AI assistants (EMP, ROZ, Elementary English, Pre-Intermediate English)

--- a/ai-assistants.html
+++ b/ai-assistants.html
@@ -211,7 +211,7 @@
                 Pomůže s opakováním klíčových pojmů a přípravou na testy.
             </p>
             <a href="https://gemini.google.com/gem/16-CLGHjGvnF5NpLibtWdS20QYctCB-Oc?usp=sharing" target="_blank"
-                class="launch-btn">Spustit asistenta ✨</a>
+                rel="noopener noreferrer" class="launch-btn">Spustit asistenta ✨</a>
         </div>
 
         <!-- ROZ Assistant -->
@@ -226,6 +226,38 @@
                 Diskutujte o tématech a řešte modelové situace.
             </p>
             <a href="https://gemini.google.com/gem/1SVBofeNaYxFXlviv3zDStsHTcaPjfAwF?usp=sharing" target="_blank"
+                rel="noopener noreferrer" class="launch-btn">Spustit asistenta ✨</a>
+        </div>
+
+        <!-- Elementary English Assistant -->
+        <div class="assistant-card">
+            <div class="assistant-icon">
+                <img src="assets/gem-elementary.png" alt="Elementary English Assistant Icon">
+            </div>
+            <span class="subject-tag">Předmět: Anglický jazyk</span>
+            <h3>Maturita Solutions Elementary</h3>
+            <p>
+                AI studijní pomocník vytvořený speciálně pro žáky pracující s učebnicí Solutions Elementary (3rd
+                Edition).
+                Je navržen tak, aby pomáhal s učením angličtiny krok za krokem, vysvětloval látku jednoduše a
+                srozumitelně.
+            </p>
+            <a href="https://gemini.google.com/gem/1NYh3Am3DjGZz89rJLEq3zMS89njCsNcc?usp=sharing" target="_blank"
+                class="launch-btn">Spustit asistenta ✨</a>
+        </div>
+
+        <!-- Pre-Intermediate English Assistant -->
+        <div class="assistant-card">
+            <div class="assistant-icon">
+                <img src="assets/gem-preintermediate.png" alt="Pre-Intermediate English Assistant Icon">
+            </div>
+            <span class="subject-tag">Předmět: Anglický jazyk</span>
+            <h3>Maturita Solutions Pre-Intermediate</h3>
+            <p>
+                Plnohodnotný AI tutor, který učí celý kurz, přizpůsobuje se slabším studentům, vede samostudium,
+                dělá speaking role-play, testuje slovíčka a pomáhá i rodičům.
+            </p>
+            <a href="https://gemini.google.com/gem/1WLBRSx4ZJzHYw-J_LE50m35_toDNFoK6?usp=sharing" target="_blank"
                 class="launch-btn">Spustit asistenta ✨</a>
         </div>
 
