Add NotebookLM exam prep article for AI Lab with images

--- a/students.html
+++ b/students.html
@@ -196,6 +196,21 @@
         </a>
 
         <!-- Articles by date (Newest first) -->
+        <a href="ai-news/notebooklm-priprava-zkousky.html" class="article-card">
+            <div class="article-card-image">
+                <img src="assets/exam-prep-hero.png" alt="NotebookLM příprava na zkoušky">
+            </div>
+            <div class="article-card-content">
+                <span class="date">Leden 2026</span>
+                <h3>NotebookLM a příprava na zkoušky</h3>
+                <p>
+                    Kompletní systém pro přípravu na zkoušky. Studijní průvodce, kartičky, kvízy a odhalení slabých
+                    míst.
+                </p>
+                <div class="read-more">Číst více →</div>
+            </div>
+        </a>
+
         <a href="ai-news/notebooklm-studijni-asistent.html" class="article-card">
             <div class="article-card-image">
                 <img src="assets/notebooklm-study-hero.png" alt="NotebookLM studijní asistent">
