--- a/ai-news/ai-ve-skolstvi-tyden3-2026.html
+++ b/ai-news/ai-ve-skolstvi-tyden3-2026.html
@@ -218,6 +218,16 @@
             padding: 0.75rem 1rem;
             text-align: center;
             font-weight: 500;
+            text-decoration: none;
+            color: var(--text-primary);
+            display: block;
+            transition: all 0.2s ease;
+        }
+
+        .tool-badge:hover {
+            background: rgba(6, 182, 212, 0.25);
+            border-color: rgba(6, 182, 212, 0.6);
+            transform: translateY(-2px);
         }
 
         .tool-badge.green {
@@ -225,9 +235,19 @@
             border-color: rgba(16, 185, 129, 0.3);
         }
 
+        .tool-badge.green:hover {
+            background: rgba(16, 185, 129, 0.25);
+            border-color: rgba(16, 185, 129, 0.6);
+        }
+
         .tool-badge.purple {
             background: rgba(147, 51, 234, 0.1);
             border-color: rgba(147, 51, 234, 0.3);
+        }
+
+        .tool-badge.purple:hover {
+            background: rgba(147, 51, 234, 0.25);
+            border-color: rgba(147, 51, 234, 0.6);
         }
     </style>
 </head>
@@ -334,14 +354,17 @@
             </p>
 
             <div class="tools-grid">
-                <div class="tool-badge">💬 ChatGPT</div>
-                <div class="tool-badge">🤖 Claude</div>
-                <div class="tool-badge purple">✨ Gemini</div>
-                <div class="tool-badge green">🔍 Perplexity</div>
-                <div class="tool-badge">📝 Notion AI</div>
-                <div class="tool-badge purple">✍️ Grammarly</div>
-                <div class="tool-badge green">📚 Quillbot</div>
-                <div class="tool-badge">📖 ScholarAI</div>
+                <a href="https://chatgpt.com" target="_blank" rel="noopener" class="tool-badge">💬 ChatGPT</a>
+                <a href="https://claude.ai" target="_blank" rel="noopener" class="tool-badge">🤖 Claude</a>
+                <a href="https://gemini.google.com" target="_blank" rel="noopener" class="tool-badge purple">✨
+                    Gemini</a>
+                <a href="https://perplexity.ai" target="_blank" rel="noopener" class="tool-badge green">🔍
+                    Perplexity</a>
+                <a href="https://notion.so" target="_blank" rel="noopener" class="tool-badge">📝 Notion AI</a>
+                <a href="https://grammarly.com" target="_blank" rel="noopener" class="tool-badge purple">✍️
+                    Grammarly</a>
+                <a href="https://quillbot.com" target="_blank" rel="noopener" class="tool-badge green">📚 Quillbot</a>
+                <a href="https://scholarai.io" target="_blank" rel="noopener" class="tool-badge">📖 ScholarAI</a>
             </div>
 
             <div class="topic-card purple">
