Add new AI education article to teachers-news.html

--- a/teachers-news.html
+++ b/teachers-news.html
@@ -151,6 +151,15 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <span class="date">Leden 2026</span>
+            <h3>AI ve vzdělávání: Strategie, regulace a studijní asistenti</h3>
+            <p>
+                Klíčové trendy posledního týdne: AI jako strategická součást vysokých škol,
+                nové politiky a regulace, a masivní růst AI studijních nástrojů.
+            </p>
+            <a href="ai-news/ai-ve-skolstvi-tyden3-2026.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <span class="date">Prosinec 2025</span>
             <h3>Chytrá výuka s Adobe AI a ChatGPT</h3>
             <p>
