Fix back button to link to AI Toolkit instead of AI Lab

--- a/ai-news/ai-ve-skolstvi-tyden3-2026.html
+++ b/ai-news/ai-ve-skolstvi-tyden3-2026.html
@@ -422,7 +422,7 @@
         </div>
 
         <div class="back-nav-container">
-            <a href="../students.html" class="btn-back">← Zpět do AI Lab</a>
+            <a href="../teachers-news.html" class="btn-back">← Zpět do AI Toolkit</a>
             <a href="../index.html" class="back-link">Zpět na domovskou stránku</a>
         </div>
     </article>
