Add comprehensive AI development overview article (January 2026) with 5 images

--- a/teachers-news.html
+++ b/teachers-news.html
@@ -152,6 +152,15 @@
     <div class="articles-grid">
         <div class="article-card">
             <span class="date">Leden 2026</span>
+            <h3>Nejnovější vývoj v AI pro vzdělávání</h3>
+            <p>
+                Komplexní přehled: GPT-5, Claude 4, Gemini 2.5, NotebookLM, česká iniciativa základka.ai,
+                ScioBot a praktická doporučení pro pedagogy.
+            </p>
+            <a href="ai-news/ai-vyvoj-leden-2026.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
+            <span class="date">Leden 2026</span>
             <h3>AI ve vzdělávání: Strategie, regulace a studijní asistenti</h3>
             <p>
                 Klíčové trendy posledního týdne: AI jako strategická součást vysokých škol,
