Add Cviceni anglictiny app link with hero image to apps.html

--- a/apps.html
+++ b/apps.html
@@ -375,6 +375,25 @@
             </div>
         </a>
 
+        <!-- Cvičení angličtiny -->
+        <div class="app-card">
+            <div class="app-preview app-preview--image">
+                <img src="assets/english-exercises-hero.png" alt="Cvičení angličtiny">
+            </div>
+            <div class="app-content">
+                <span class="app-tag">Angličtina</span>
+                <h3 class="app-title">Cvičení angličtiny</h3>
+                <p class="app-description">
+                    Interaktivní cvičení pro procvičování anglického jazyka.
+                    Různé typy aktivit pro upevnění gramatiky a slovní zásoby.
+                </p>
+                <div class="app-actions">
+                    <a href="https://cviceni-anj.netlify.app/" class="btn-launch" target="_blank"
+                        rel="noopener noreferrer">Spustit</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer -->
