Add Generator promptu app card with hero image

--- a/apps.html
+++ b/apps.html
@@ -394,6 +394,25 @@
             </div>
         </div>
 
+        <!-- Generátor promptu -->
+        <div class="app-card">
+            <div class="app-preview app-preview--image">
+                <img src="assets/prompt-generator-hero.png" alt="Generátor promptu">
+            </div>
+            <div class="app-content">
+                <span class="app-tag" style="background: rgba(245, 158, 11, 0.2); color: #fbbf24;">AI Nástroj</span>
+                <h3 class="app-title">Generátor promptu</h3>
+                <p class="app-description">
+                    Generátor promptů pro tvorbu infografik pomocí AI.
+                    Nastavte obsah, strukturu a styl a získejte perfektní prompt.
+                </p>
+                <div class="app-actions">
+                    <a href="https://generatorpromtu.netlify.app/" class="btn-launch" target="_blank"
+                        rel="noopener noreferrer">Spustit</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer -->
