--- a/apps.html
+++ b/apps.html
@@ -403,7 +403,7 @@
                 <span class="app-tag" style="background: rgba(245, 158, 11, 0.2); color: #fbbf24;">AI Nástroj</span>
                 <h3 class="app-title">Generátor promptu</h3>
                 <p class="app-description">
-                    Generátor promptů pro tvorbu infografik pomocí AI.
+                    Generátor promptů pro tvorbu infografik v NotebookuLM, nebo Gemini.
                     Nastavte obsah, strukturu a styl a získejte perfektní prompt.
                 </p>
                 <div class="app-actions">
