Add NotebookLM Pruvodce app card with hero image

--- a/apps.html
+++ b/apps.html
@@ -413,6 +413,25 @@
             </div>
         </div>
 
+        <!-- NotebookLM Průvodce -->
+        <div class="app-card">
+            <div class="app-preview app-preview--image">
+                <img src="assets/notebooklm-guide-hero.png" alt="NotebookLM Průvodce">
+            </div>
+            <div class="app-content">
+                <span class="app-tag" style="background: rgba(234, 67, 53, 0.2); color: #ea4335;">Průvodce</span>
+                <h3 class="app-title">NotebookLM Průvodce</h3>
+                <p class="app-description">
+                    Komplexní průvodce NotebookLM pro učitele. Naučte se využívat AI notebook
+                    pro přípravu materiálů, kvízů, infografik a dalších výukových pomůcek.
+                </p>
+                <div class="app-actions">
+                    <a href="https://notebooklm-pruvodce.netlify.app/" class="btn-launch" target="_blank"
+                        rel="noopener noreferrer">Spustit</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Footer -->
