--- a/news.html
+++ b/news.html
@@ -145,6 +145,16 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <img src="assets/ai-privacy-hero.png" alt="8 AI promptů pro soukromí">
+            <span class="date">Leden 2026</span>
+            <h3>8 AI PROMPTŮ PRO SOUKROMÍ</h3>
+            <p>
+                Jak využít AI k ochraně vašeho soukromí, bezpečí a duševního klidu.
+                Sada 8 praktických promptů pro digitální i reálný život.
+            </p>
+            <a href="ai-news/ai-prompty-soukromi.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <img src="assets/claude-healthcare-hero.png" alt="Claude for Healthcare">
             <span class="date">Leden 2026</span>
             <h3>Anthropic představuje Claude for Healthcare</h3>
