Fix: Limit homepage to 9 articles + code quality fixes (teachers.html structure, nav cleanup)

--- a/apps.html
+++ b/apps.html
@@ -221,12 +221,10 @@
                 ☰
             </button>
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="index.html" class="nav-link" onclick="window.location.href='index.html'">Domů</a></li>
-                <li><a href="index.html#explore" class="nav-link"
-                        onclick="window.location.href='index.html#explore'">Prozkoumejte AI</a></li>
+                <li><a href="index.html" class="nav-link">Domů</a></li>
+                <li><a href="index.html#explore" class="nav-link">Prozkoumejte AI</a></li>
                 <li><a href="apps.html" class="nav-link active">Nástroje</a></li>
-                <li><a href="index.html#contact" class="nav-link"
-                        onclick="window.location.href='index.html#contact'">Kontakt</a></li>
+                <li><a href="index.html#contact" class="nav-link">Kontakt</a></li>
             </ul>
         </div>
     </nav>
