--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#" class="nav-link active">Domů</a></li>
                 <li><a href="#explore" class="nav-link">Prozkoumejte AI</a></li>
-                <li><a href="apps.html" class="nav-link" onclick="window.location.href='apps.html'">Nástroje</a></li>
+                <li><a href="apps.html" class="nav-link">Nástroje</a></li>
                 <li><a href="#contact" class="nav-link">Kontakt</a></li>
             </ul>
         </div>
