Unify article navigation: standardize 'Zpět na' across all sections

--- a/ai-news/ai-prompty-soukromi.html
+++ b/ai-news/ai-prompty-soukromi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -329,8 +329,8 @@ Polož mi případné doplňující otázky.</code>
 
         </div>
 
-        <div class="back-nav">
-            <a href="../news.html" class="btn-back">← Zpět do AI Pulse</a>
+        <div class="back-nav-container">
+            <a href="../news.html" class="btn-back">← Zpět na AI Pulse</a>
             <a href="../index.html" class="back-link">Zpět na domovskou stránku</a>
         </div>
     </article>
