--- a/ai-news/chytr-vyuka-s-adobe-ai.html
+++ b/ai-news/chytr-vyuka-s-adobe-ai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -255,7 +255,7 @@
         </div>
 
         <div class="back-nav-container">
-            <a href="../teachers.html" class="btn-back">← Zpět do AI Toolkit</a>
+            <a href="../teachers.html" class="btn-back">← Zpět na AI Toolkit</a>
             <a href="../index.html" class="back-link">Zpět na domovskou stránku</a>
         </div>
     </article>
