--- a/notebooklm/index.html
+++ b/notebooklm/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -139,7 +139,7 @@
     </nav>
 
     <div class="back-nav-container">
-        <a href="../teachers.html" class="back-link">← Zpět do AI Toolkit</a>
+        <a href="../teachers.html" class="back-link">← Zpět na AI Toolkit</a>
     </div>
 
     <!-- Hub Hero -->
@@ -278,7 +278,7 @@
     </div>
 
     <div class="back-button-container">
-        <a href="../teachers.html" class="btn-back">← Zpět do AI Toolkit</a>
+        <a href="../teachers.html" class="btn-back">← Zpět na AI Toolkit</a>
     </div>
 
     <!-- Footer -->
