--- a/notebooklm/notebooklm-chaos.html
+++ b/notebooklm/notebooklm-chaos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -202,7 +202,7 @@
 
         <!-- Odkaz zpět -->
         <div class="back-button-container">
-            <a href="index.html" class="btn-back">← Zpět do NotebookLM</a>
+            <a href="index.html" class="btn-back">← Zpět na NotebookLM</a>
             <a href="../index.html" class="btn-back ml-2">← Zpět na úvod</a>
         </div>
     </article>
