--- a/notebooklm/novinky-prosinec-2025.html
+++ b/notebooklm/novinky-prosinec-2025.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -210,7 +210,7 @@
         <div
             style="margin-top: 4rem; display: flex; justify-content: space-between; align-items: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 2rem;">
             <a href="index.html" class="btn-back">← Zpět na NotebookLM</a>
-            <a href="../teachers.html" class="back-link">Zpět do AI Toolkit</a>
+            <a href="../teachers.html" class="back-link">Zpět na AI Toolkit</a>
         </div>
     </article>
 
