--- a/notebooklm/tvorba-podcastu-z-poznamek.html
+++ b/notebooklm/tvorba-podcastu-z-poznamek.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -175,7 +175,7 @@
 
             <div class="back-nav-container">
                 <a href="index.html" class="btn-back">← Zpět na NotebookLM</a>
-                <a href="../teachers.html" class="back-link">Zpět do AI Toolkit</a>
+                <a href="../teachers.html" class="back-link">Zpět na AI Toolkit</a>
             </div>
         </div>
     </article>
