--- a/notebooklm/uvod-do-notebooklm.html
+++ b/notebooklm/uvod-do-notebooklm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -371,7 +371,7 @@
         <!-- Odkazy -->
         <div class="back-nav-container">
             <a href="index.html" class="btn-back">← Zpět na NotebookLM</a>
-            <a href="../teachers.html" class="back-link">Zpět do AI Toolkit</a>
+            <a href="../teachers.html" class="back-link">Zpět na AI Toolkit</a>
         </div>
     </article>
 
