--- a/teachers-news.html
+++ b/teachers-news.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -139,7 +139,7 @@
 
     <!-- Point back to teachers hub -->
     <div class="back-nav-container">
-        <a href="teachers.html" class="back-link">← Zpět do AI Toolkit</a>
+        <a href="teachers.html" class="back-link">← Zpět na AI Toolkit</a>
     </div>
 
     <!-- Hub Hero -->
