--- a/ai-news/ai-ve-skolstvi-tyden3-2026.html
+++ b/ai-news/ai-ve-skolstvi-tyden3-2026.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -422,7 +422,7 @@
         </div>
 
         <div class="back-nav-container">
-            <a href="../teachers-news.html" class="btn-back">← Zpět do AI Toolkit</a>
+            <a href="../teachers-news.html" class="btn-back">← Zpět na AI Toolkit</a>
             <a href="../index.html" class="back-link">Zpět na domovskou stránku</a>
         </div>
     </article>
