--- a/ai-news/notebooklm-studijni-asistent.html
+++ b/ai-news/notebooklm-studijni-asistent.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -322,7 +322,7 @@
         </div>
 
         <div class="back-nav-container">
-            <a href="../students.html" class="btn-back">← Zpět do AI Lab</a>
+            <a href="../students.html" class="btn-back">← Zpět na AI Lab</a>
             <a href="../index.html" class="back-link">Zpět na domovskou stránku</a>
         </div>
     </article>
