--- a/notebooklm/notebook-gemini-synergie.html
+++ b/notebooklm/notebook-gemini-synergie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="cs">
 
 <head>
@@ -347,7 +347,7 @@
 
         <!-- Odkaz zpět -->
         <div class="back-button-container">
-            <a href="index.html" class="btn-back">← Zpět do NotebookLM</a>
+            <a href="index.html" class="btn-back">← Zpět na NotebookLM</a>
             <a href="../index.html" class="btn-back" style="margin-left: 1rem;">← Zpět na úvod</a>
         </div>
     </article>
