--- a/news.html
+++ b/news.html
@@ -145,6 +145,16 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <img src="assets/ai-evolution-specialized.png" alt="AI trendy 2026">
+            <span class="date">Leden 2026</span>
+            <h3>AI V ROCE 2026: TRENDY, NÁSTROJE A PRAKTICKÝ DOPAD</h3>
+            <p>
+                Kompletní přehled klíčových trendů v AI: evoluce LLM, multimodální generace,
+                podnikové nástroje a dopady na vzdělávání.
+            </p>
+            <a href="ai-news/ai-trendy-2026.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <img src="assets/ai-privacy-hero.png" alt="8 AI promptů pro soukromí">
             <span class="date">Leden 2026</span>
             <h3>8 AI PROMPTŮ PRO SOUKROMÍ</h3>
