Make article images floated for better text flow

--- a/ai-news/ai-trendy-2026.html
+++ b/ai-news/ai-trendy-2026.html
@@ -205,7 +205,7 @@
 
             <h2>🧠 Směr vývoje LLM v roce 2026</h2>
 
-            <img src="../assets/ai-evolution-specialized.png" alt="Evoluce AI modelů" class="article-image">
+            <img src="../assets/ai-evolution-specialized.png" alt="Evoluce AI modelů" class="article-image float-right">
 
             <p>
                 Éra „jednoho obřího modelu pro všechno" ustupuje do pozadí. Firmy zjistily, že <strong>menší,
@@ -244,7 +244,7 @@
 
             <h2>🎨 Generativní AI – co je teď „horké"</h2>
 
-            <img src="../assets/multimodal-ai-core.png" alt="Multimodální AI" class="article-image float-right">
+            <img src="../assets/multimodal-ai-core.png" alt="Multimodální AI" class="article-image float-left">
 
             <h3>Multimodální generace</h3>
 
@@ -280,7 +280,7 @@
 
             <h2>💼 Praktické AI nástroje pro každého</h2>
 
-            <img src="../assets/enterprise-ai-tools.png" alt="Enterprise AI nástroje" class="article-image">
+            <img src="../assets/enterprise-ai-tools.png" alt="Enterprise AI nástroje" class="article-image float-right">
 
             <p>
                 V kancelářských balících se generativní AI stává <strong>standardem</strong>, nikoli experimentální
@@ -401,7 +401,7 @@
 
             <h2>🎓 Co to znamená pro školu a výuku</h2>
 
-            <img src="../assets/ai-classroom-future.png" alt="AI ve vzdělávání" class="article-image">
+            <img src="../assets/ai-classroom-future.png" alt="AI ve vzdělávání" class="article-image float-left">
 
             <h3>Výukový kontext</h3>
 
