Add OpenAI Prism article and integrate into website

--- a/news.html
+++ b/news.html
@@ -145,6 +145,16 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <img src="assets/openai-prism-hero.png" alt="OpenAI Prism">
+            <span class="date">Leden 2026</span>
+            <h3>OPENAI PRISM: REVOLUCE VE VĚDECKÉM PSÁNÍ A VÝUCE</h3>
+            <p>
+                Nový AI-native workspace pro vědce a učitele. LaTeX editor, GPT-5.2 asistence a týmová spolupráce v
+                jednom nástroji.
+            </p>
+            <a href="ai-news/openai-prism.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <img src="assets/ai-evolution-specialized.png" alt="AI trendy 2026">
             <span class="date">Leden 2026</span>
             <h3>AI V ROCE 2026: TRENDY, NÁSTROJE A PRAKTICKÝ DOPAD</h3>
