--- a/students.html
+++ b/students.html
@@ -196,6 +196,19 @@
         </a>
 
         <!-- Articles by date (Newest first) -->
+        <a href="ai-news/openai-prism.html" class="article-card">
+            <div class="article-card-image">
+                <img src="assets/openai-prism-hero.png" alt="OpenAI Prism">
+            </div>
+            <div class="article-card-content">
+                <span class="date">Leden 2026</span>
+                <h3>OpenAI Prism: Workspace pro vědecké psaní</h3>
+                <p>
+                    Kombinace LaTeXu a GPT-5.2 pro psaní odborných textů, diplomových prací a vědeckých článků.
+                </p>
+                <div class="read-more">Číst více →</div>
+            </div>
+        </a>
         <a href="ai-news/notebooklm-priprava-zkousky.html" class="article-card">
             <div class="article-card-image">
                 <img src="assets/exam-prep-hero.png" alt="NotebookLM příprava na zkoušky">
