Aktualizace odkazu u karty Generátor promptu

--- a/apps.html
+++ b/apps.html
@@ -405,7 +405,7 @@
                     Nastavte obsah, strukturu a styl a získejte perfektní prompt.
                 </p>
                 <div class="app-actions">
-                    <a href="https://generatorpromtu.netlify.app/" class="btn-launch" target="_blank"
+                    <a href="https://generator-promptu.netlify.app/" class="btn-launch" target="_blank"
                         rel="noopener noreferrer">Spustit</a>
                 </div>
             </div>
