Přidání karty Audio/Video Generátor promptů

--- a/apps.html
+++ b/apps.html
@@ -411,6 +411,25 @@
             </div>
         </div>
 
+        <!-- Audio/Video Generátor promptu -->
+        <div class="app-card">
+            <div class="app-preview app-preview--image">
+                <img src="assets/audio-video-hero.png" alt="Audio & Video Generátor promptů">
+            </div>
+            <div class="app-content">
+                <span class="app-tag" style="background: rgba(139, 92, 246, 0.2); color: #a78bfa;">AI Multimédia</span>
+                <h3 class="app-title">Generátor promptů (Audio & Video)</h3>
+                <p class="app-description">
+                    Specializovaný generátor promptů pro tvorbu zvuku a videa pomocí AI.
+                    Ideální pro nástroje jako ElevenLabs, Runway nebo Sora.
+                </p>
+                <div class="app-actions">
+                    <a href="https://promptgenerator-audio-video.netlify.app/" class="btn-launch" target="_blank"
+                        rel="noopener noreferrer">Spustit</a>
+                </div>
+            </div>
+        </div>
+
         <!-- NotebookLM Průvodce -->
         <div class="app-card">
             <div class="app-preview app-preview--image">
