Úprava nadpisu a popisu u karty Audio & Video

--- a/apps.html
+++ b/apps.html
@@ -418,10 +418,11 @@
             </div>
             <div class="app-content">
                 <span class="app-tag" style="background: rgba(139, 92, 246, 0.2); color: #a78bfa;">AI Multimédia</span>
-                <h3 class="app-title">Generátor promptů (Audio & Video)</h3>
+                <h3 class="app-title">Generátor promptů Audio & Video</h3>
                 <p class="app-description">
                     Specializovaný generátor promptů pro tvorbu zvuku a videa pomocí AI.
-                    Ideální pro nástroje jako ElevenLabs, Runway nebo Sora.
+                    Ideální pro nástroje jako NotebookLM a AI Studio.
+                    Použitelné také pro ElevenLabs, Runway nebo Sora.
                 </p>
                 <div class="app-actions">
                     <a href="https://promptgenerator-audio-video.netlify.app/" class="btn-launch" target="_blank"
