Přidání karty Prezentační Prompty

--- a/apps.html
+++ b/apps.html
@@ -431,6 +431,25 @@
             </div>
         </div>
 
+        <!-- Prezentační Prompty -->
+        <div class="app-card">
+            <div class="app-preview app-preview--image">
+                <img src="assets/presentation-prompt-hero.png" alt="Generátor promptů pro prezentace">
+            </div>
+            <div class="app-content">
+                <span class="app-tag" style="background: rgba(16, 185, 129, 0.2); color: #34d399;">Prezentace</span>
+                <h3 class="app-title">Generátor promptů pro prezentace</h3>
+                <p class="app-description">
+                    Vytvářejte podklady pro profesionální prezentace pomocí AI.
+                    Optimalizovaný nástroj pro generování obsahu a struktury snímků v NotebookuLM.
+                </p>
+                <div class="app-actions">
+                    <a href="https://ntb-presentation-prompt.netlify.app/" class="btn-launch" target="_blank"
+                        rel="noopener noreferrer">Spustit</a>
+                </div>
+            </div>
+        </div>
+
         <!-- NotebookLM Průvodce -->
         <div class="app-card">
             <div class="app-preview app-preview--image">
