Přejmenování karty Generátor promptu na Generátor promptů Infografika

--- a/apps.html
+++ b/apps.html
@@ -399,7 +399,7 @@
             </div>
             <div class="app-content">
                 <span class="app-tag" style="background: rgba(245, 158, 11, 0.2); color: #fbbf24;">AI Nástroj</span>
-                <h3 class="app-title">Generátor promptu</h3>
+                <h3 class="app-title">Generátor promptů Infografika</h3>
                 <p class="app-description">
                     Generátor promptů pro tvorbu infografik v NotebookuLM, nebo Gemini.
                     Nastavte obsah, strukturu a styl a získejte perfektní prompt.
