Přejmenování karty Generátor promptů pro prezentace na Generátor promptů Prezentace

--- a/apps.html
+++ b/apps.html
@@ -438,7 +438,7 @@
             </div>
             <div class="app-content">
                 <span class="app-tag" style="background: rgba(16, 185, 129, 0.2); color: #34d399;">Prezentace</span>
-                <h3 class="app-title">Generátor promptů pro prezentace</h3>
+                <h3 class="app-title">Generátor promptů Prezentace</h3>
                 <p class="app-description">
                     Vytvářejte podklady pro profesionální prezentace pomocí AI.
                     Optimalizovaný nástroj pro generování obsahu a struktury snímků v NotebookuLM.
