Přidána stránka Gemini Asistenti pro učitele s funkčními odkazy

--- a/apps.html
+++ b/apps.html
@@ -450,6 +450,25 @@
             </div>
         </div>
 
+        <!-- Gemini Assistants for Teachers -->
+        <a href="gemini-pro-ucitele.html" class="app-card" style="text-decoration: none;">
+            <div class="app-preview app-preview--image">
+                <img src="assets/gemini-teachers-hero.png" alt="Gemini Asistenti pro učitele">
+            </div>
+            <div class="app-content">
+                <span class="app-tag" style="background: rgba(37, 99, 235, 0.2); color: #60a5fa;">Pro učitele</span>
+                <h3 class="app-title">Gemini Gemy pro učitele</h3>
+                <p class="app-description">
+                    Speciálně vytvoření AI asistenti pro usnadnění učitelské práce.
+                    Příprava hodin, tvorba materiálů a pomoc s administrativou na jednom místě.
+                </p>
+                <div class="app-actions">
+                    <span class="btn-launch" style="background: linear-gradient(135deg, #2563eb, #7c3aed);">Otevřít
+                        sekci</span>
+                </div>
+            </div>
+        </a>
+
         <!-- NotebookLM Průvodce -->
         <div class="app-card">
             <div class="app-preview app-preview--image">
