Přidán nový Gem asistent (Didaktický architekt) a Moltbook AI článek

--- a/gemini-pro-ucitele.html
+++ b/gemini-pro-ucitele.html
@@ -273,6 +273,25 @@
                 asistenta ✨</a>
         </div>
 
+        <!-- Didactic Architect Assistant -->
+        <div class="assistant-card">
+            <div class="assistant-icon">
+                <img src="assets/differentiation-levels.png" alt="Didaktický architekt Icon">
+            </div>
+            <span class="role-tag">Role: Architekt</span>
+            <h3>Generuj obrázek</h3>
+            <p>
+                Tento asistent funguje jako Didaktický architekt inkluzivní hodiny. Pomáhá vytvářet a strukturovat výuku
+                podle jasného cíle, Bloomovy taxonomie a principů diferenciace. Umí navrhnout kompletní přípravu hodiny,
+                analyzovat a upravit vaše stávající materiály, diferencovat výuku do tří úrovní, aplikovat IVP a SVP
+                opatření, nabídnout vhodné didaktické metody podle Bloomovy úrovně, generovat křížovky a osmisměrky a
+                zkontrolovat realistickost rozsahu a času.
+            </p>
+            <a href="https://gemini.google.com/gem/1mpVqRwedfOZ3RHiW8ohgZ6wv2DR9xfsP?usp=sharing" target="_blank"
+                rel="noopener noreferrer" class="launch-btn">Spustit
+                asistenta ✨</a>
+        </div>
+
         <!-- Future Placeholder -->
         <div class="assistant-card" style="opacity: 0.6; border-style: dashed;">
             <div class="assistant-icon"
