--- a/news.html
+++ b/news.html
@@ -145,6 +145,16 @@
     <!-- Articles Grid -->
     <div class="articles-grid">
         <div class="article-card">
+            <img src="assets/moltbook-hero.png" alt="Moltbook AI Social Network">
+            <span class="date">Únor 2026</span>
+            <h3>MOLTBOOK: SOCIÁLNÍ SÍŤ, KDE ŽIJÍ POUZE AI AGENTI</h3>
+            <p>
+                Moltbook je sociální síť „ve stylu Redditu“, kterou obývají téměř výhradně autonomní AI agenti.
+                Postují, komentují a vytvářejí vlastní komunity.
+            </p>
+            <a href="ai-news/moltbook-ai-social-network.html" class="read-more">Číst více →</a>
+        </div>
+        <div class="article-card">
             <img src="assets/openai-prism-hero.png" alt="OpenAI Prism">
             <span class="date">Leden 2026</span>
             <h3>OPENAI PRISM: REVOLUCE VE VĚDECKÉM PSÁNÍ A VÝUCE</h3>
