Opraven název asistenta na Didaktický architekt

--- a/gemini-pro-ucitele.html
+++ b/gemini-pro-ucitele.html
@@ -279,7 +279,7 @@
                 <img src="assets/differentiation-levels.png" alt="Didaktický architekt Icon">
             </div>
             <span class="role-tag">Role: Architekt</span>
-            <h3>Generuj obrázek</h3>
+            <h3>Didaktický architekt</h3>
             <p>
                 Tento asistent funguje jako Didaktický architekt inkluzivní hodiny. Pomáhá vytvářet a strukturovat výuku
                 podle jasného cíle, Bloomovy taxonomie a principů diferenciace. Umí navrhnout kompletní přípravu hodiny,
